[gd_scene load_steps=5 format=3 uid="uid://dshxsrgqjwt67"]

[ext_resource type="Script" uid="uid://ro671wmm71md" path="res://scripts/grid_manager.gd" id="1_2btm2"]
[ext_resource type="Script" uid="uid://c2ua5ofjqpf2v" path="res://scripts/hexgrid_snap_tool.gd" id="1_li2mq"]
[ext_resource type="PackedScene" uid="uid://fb3dfu5xud78" path="res://scenes/wall_curve.tscn" id="2_l8ejl"]
[ext_resource type="Script" uid="uid://dciiuqae6esb7" path="res://scripts/trigrid_snap_tool.gd" id="4_6r0t4"]

[node name="grid" type="Node"]
script = ExtResource("1_2btm2")

[node name="wall_curve" parent="." instance=ExtResource("2_l8ejl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7683716e-07, 0)
visible = false

[node name="wall_curve2" parent="." instance=ExtResource("2_l8ejl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.7357988, 1.0844369, 1.3939469)
visible = false

[node name="wall_curve3" parent="." instance=ExtResource("2_l8ejl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.536743e-07, 0)
visible = false

[node name="wall_curve4" parent="." instance=ExtResource("2_l8ejl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8186533, -1.9073486e-06, -3.15)
visible = false

[node name="hexgrid_snap_tool" type="Node" parent="."]
script = ExtResource("1_li2mq")

[node name="trigrid_snap_tool" type="Node" parent="."]
script = ExtResource("4_6r0t4")

[node name="hexgrid_mesh" type="MeshInstance3D" parent="."]

[node name="trigrid_mesh" type="MeshInstance3D" parent="."]

[node name="GridToggleControl" type="Control" parent="."]
layout_mode = 3
offset_right = 539.0
offset_bottom = 135.0

[node name="Hexgrid" type="Control" parent="GridToggleControl"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="HexgridCheckButton" type="CheckButton" parent="GridToggleControl/Hexgrid"]
layout_mode = 1
anchors_preset = -1
offset_left = 120.0
offset_top = 37.0
offset_right = 164.0
offset_bottom = 61.0

[node name="HexgridLabel" type="Label" parent="GridToggleControl/Hexgrid"]
layout_mode = 0
offset_left = 48.0
offset_top = 35.0
offset_right = 88.0
offset_bottom = 58.0
text = "Hexgrid"

[node name="Trigrid" type="Control" parent="GridToggleControl"]
layout_mode = 1
offset_top = 43.0
offset_right = 40.0
offset_bottom = 83.0

[node name="TrigridCheckButton" type="CheckButton" parent="GridToggleControl/Trigrid"]
layout_mode = 1
anchors_preset = -1
offset_left = 120.0
offset_top = 37.0
offset_right = 164.0
offset_bottom = 61.0

[node name="TrigridLabel" type="Label" parent="GridToggleControl/Trigrid"]
layout_mode = 0
offset_left = 48.0
offset_top = 35.0
offset_right = 88.0
offset_bottom = 58.0
text = "Trigrid"

[node name="Hexagon" type="Control" parent="GridToggleControl"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="toggled" from="GridToggleControl/Hexgrid/HexgridCheckButton" to="." method="_on_hexgrid_check_button_toggled"]
[connection signal="toggled" from="GridToggleControl/Trigrid/TrigridCheckButton" to="." method="_on_trigrid_check_button_toggled"]
